<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222121"
    android:orientation="horizontal"
    tools:context=".ui.MainActivity">

    <com.sizeofanton.deviationview.DeviationView
        android:id="@+id/noteDeviationView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rgStrings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-thin"
        android:text="?"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/rgStrings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noteDeviationView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <Spinner
        android:id="@+id/spinnerNotes"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:entries="@array/notes_set"
        android:theme="@style/SpinnerTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-thin"
        android:text="0 Hz"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noteDeviationView"
        app:layout_constraintTop_toBottomOf="@+id/tvNote" />

    <RadioGroup
        android:id="@+id/rgStrings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/spinnerNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbString6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#F8F3F3"
            android:text="E "
            android:textColor="#FFFEFE" />

        <RadioButton
            android:id="@+id/rbString5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#F8F3F3"
            android:text="B "
            android:textColor="#FFFEFE" />

        <RadioButton
            android:id="@+id/rbString4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#F8F3F3"
            android:text="G "
            android:textColor="#FFFEFE" />

        <RadioButton
            android:id="@+id/rbString3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#F8F3F3"
            android:text="D "
            android:textColor="#FFFEFE" />

        <RadioButton
            android:id="@+id/rbString2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#F8F3F3"
            android:text="A "
            android:textColor="#FFFEFE" />

        <RadioButton
            android:id="@+id/rbString1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#F8F3F3"
            android:text="E "
            android:textColor="#FFFEFE" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>